# langchain_practice

./: .gitignore  pyproject.toml  requirements.txt
a1_LLMS/: 1_llmdemo.py
a2_ChatModels/: 1_chatmodel_openai.py  2_chatmodel_anthropic.py  3_chatmodel_google.py  4_chatmodel_hf_api.py  5_chatmodel_hf_local.py
a3_EmbeddedModels/: 1_embedding_openai_query.py  2_embedding_openai_docs.py  3_embedding_hf_local.py  4_embeding_document.py
a4_structuredOutput/: json_schema.json  typedict_demo.py  with_structured_output_json.py  with_structured_output_pydantic.py  with_structured_output_typedict.py
a5_output_parser/: PydanticOutputParser.py  StructuredOutputParser.py  jsonoutputparser.py  stroutputparser.py  stroutputparser2.py
a6_chains_in_langchain/: conditional_chain.py  parallel_chain.py  sequential_chain.py  simple_chain.py
a7_Runnables/: runnable_branch.py  runnable_parallel.py  runnable_sequence.py
a8_DocumentLoader/: cricket.txt  directory_load.py  pdf_loader.py  text_loader.py  webbase_loader.py
a9_TextSplitter/: length_based.py  semantic_meaning.py
prompts_types/: chat_history.txt  chat_prompt_template.py  chatbot.py  message_placeholder.py  messages.py  prompt_generator.py  prompt_ui.py  template.json
tools/: agents_in_langchain.ipynb
