[project]
name = "langchain-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-generativeai>=0.8.6",
    "grandalf>=0.8",
    "huggingface-hub>=0.36.2",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-core>=1.2.16",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.54.0",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=4.57.6",
]
